updated index.html with a new line

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
       iure quo voluptate, atque nam illo vero quia ratione at nemo quas optio
       doloribus obcaecati temporibus ea quod eveniet velit!
     </p>
+    <p>A new line.</p>
   </body>
 </html>
