added image to myproject

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
       doloribus obcaecati temporibus ea quod eveniet velit!
     </p>
     <p>A new line.</p>
+    <div><img src="dentist.png" alt="Dentist" style="width: 100%;max-width: 960px;"></div>
   </body>
 </html>
