updated index.html with emergency fix

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
       doloribus obcaecati temporibus ea quod eveniet velit!
     </p>
     <p>A new line.</p>
+    <p>This is for understanding the merging.</p>
   </body>
 </html>
