--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <p>This is for understanding the merging.</p>
     <div><img src="dentist.png" alt="Dentist" style="width: 100%;max-width: 960px;"></div>
     <div><img src="knight.png" alt="Knight" style="width: 100%;max-width: 640px;"></div>
+    <p>This is for a new branch called html-skeleton.</p>
   </body>
 </html>
